2010-01-16  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneOptionsPanel.cs: Make the main nib picker entry
	  editable so that it can be cleared.

2010-01-14  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneBuildOptionsPanel.cs: Fix displaying i18n options.

2010-01-13  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Treat empty identity as "developer
	  automatic".

2009-12-31  Michael Hutchinson  <mhutchinson@novell.com>

	* Keychain.cs: Fix extracting the CN from X509 certs.

2009-12-29  Michael Hutchinson  <mhutchinson@novell.com>

	* MobileProvision.cs: Only return the first profile with each
	  UUID. iTunes and Xcode install the same cert with different
	  names, but the file is exactly the same. Prevents displaying
	  same cert twice if it was installed both ways.

	* IPhoneBuildExtension.cs: Work around bug in Apple's XML
	  entitlements parser that broke entitlements when booleans
	  were present in the plist. Also fix embedding provisioning
	  profiles that were installed using iTunes rather than Xcode.
	  Fix casing of some entries in info.plist.

2009-12-18  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: Enable provisioning profiles
	  for dev keys too. Add an "automatic" entry.

	* DataConverter.cs:
	* MobileProvision.cs:
	* MonoDevelop.IPhone.csproj: Added DataConverter.

	* IPhoneBuildExtension.cs: Embed entitlements and provisioning
	  profile into developer-signed builds. Autodetect valid
	  profiles and keys for the app bundle. Merge provisioning
	  profile entitlements into the app entitlements. Generate the
	  xcent directly instead of calling mtouchpack. Add much more
	  detailed error outputs. Refactor the packaging code into a
	  number of separate methods so it's easier to follow.

2009-12-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Keychain.cs: More error logging for certificate/identity/key
	  enumeration.

	* gtk-gui/gui.stetic: Flush.
